- some refactorings, also to use androlog